02-kong-ingress-req-manipulation/echo-app.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  # annotations:
  #  konghq.com/path: '/api' # This annotation can be used on a Service resource only. This annotation can be used to prepend an HTTP path of a request, before the request is forwarded. For example, if the annotation konghq.com/path: "/api" is applied to a Kubernetes Service billings, then any request that is routed to the billings service will be prepended with /api HTTP path. If the request contains /foo/something as the path, then the service will receive an HTTP request with path set as /api [...]
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}
